# TORUS-Theory

./: .gitattributes  .gitattributes.bak  .gitattributes.disabled  .gitignore  .pre-commit-config.yaml  .zenodo.json  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DR_REPORT_BICYCLE.md  FLRS00PRT_S_20250550000_01D_EN.rnx  LICENSE  README.md  audio_fft.ipynb  checksums_v1.1.txt  chi_modtime.py  chi_modtime_trace.csv  constant_ladder_residuals.ipynb  entropy_analyze.ipynb  entropy_counts.csv  entropy_drift_pure.py  environment.yml  extract_doppler.py  mkdocs.yml  populate_placeholders.sh  pyproject.toml  recursive_controller_validation.ipynb  repair_notebooks.py  repo_plan.md  requirements-ci.txt  requirements.txt  shannon_bound_compression.ipynb  stack_timing.py  task_list.json  timing.csv  timing_stats.ipynb  torus_book_cleaned.tex
.copilot/: validation_tasks.md
.devcontainer/: Dockerfile  devcontainer.json
data/: README.md  README_DATA.md
docker/: README.md
docs/: CONTRIBUTING.md  GLOSSARY.md  INDEX.md  OVERVIEW.md  README.md  SideBand_Primer.md
experiments/: Controller Dimension Supplement to TORUS Theory Recursive Closure and Observer–State Synchronization.docx  Dimensional Constants Interrelation in TORUS Theory (0D–13D) – Formal Derivation and Closure.docx  Topology of the Torus‑of‑Tori, chi-beta‑Function, and the Projection‑Angle Theorem.docx  Universal Recursion - A 14 Sigma Cross-Domain Validation (Phase B).tex
notebooks/: 00_TORUS_tour.ipynb  README.md  __init__.py  cmb_torus_vs_thet.ipynb
scripts/: README.md  __init__.py  audio_harmonics.py  (+21 more)
(+529 files in other folders)
