[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torus_theory"
version = "0.1.0"
description = "TORUS Theory tools and validation suite"
authors = [
  {name = "Genghis Darb", email = "genghisdarb@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "papermill>=2.5",
    "pandas",
    "numpy",
    "scipy",
    "matplotlib"
]

[project.scripts]
torus-cli = "torus_cli:app"

[tool.setuptools.packages.find]
where = ["src"]
